--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ site.name }}</title>
+    <title>{{ site.seo_title }}</title>
 
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="{{ site.meta_description }}">
+    <meta name="author" content="Applidget">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -13,15 +13,24 @@
     <![endif]-->
 
     <!-- Le styles -->
-    {{ 'bootstrap.min.css' | stylesheet_tag }}
-    {{ 'bootstrap-responsive.min.css' | stylesheet_tag }}
-
+    {{ 'bootstrap.min' | stylesheet_tag }}
+    {{ 'bootstrap-responsive.min.custom' | stylesheet_tag }}
+    {{ 'application' | stylesheet_tag }}
   </head>
   <body>
+    
 
-    <div class="container-fluid">
+    <div class="container">
+
+      {% include 'topmenu' %}
 
       {% block 'main' %}
+
+        <div class="row">
+          <div class="span4">Hello world</div>
+          <div class="span4">Hello world</div>
+          <div class="span4">Hello world</div>
+        </div>
       {% endblock %}
 
     </div> <!-- /container -->
