--- a/app/views/snippets/topmenu.liquid
+++ b/app/views/snippets/topmenu.liquid
@@ -8,7 +8,7 @@
       </button>
         <a href="./" class="brand">Applidget</a>
       <div class="nav-collapse collapse">
-        {% nav site, class: 'nav', active_class: 'active' %}
+        {% nav site, class: 'nav', active_class: 'active', bootstrap: true %}
       </div>
     </div>
   </div>
