--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -10,6 +10,11 @@ $grey: #3d3d3d;
   font-family: "museo500";
   color: $grey;
   font-size: 1.2em;
+
+  .brand {
+
+  }
+
   .navbar-inner, .active a {
     background: transparent;
     border: none;
@@ -33,8 +38,9 @@ $grey: #3d3d3d;
 }
 @media(min-width: 980px) {
   #main-navbar {
-    margin-top: 2em;
+    margin-top: 1em;
     .nav-collapse {
+      margin-top: 1.5em;
       float: right;
     }    
   }
