Remove hello worlds

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -26,11 +26,8 @@
 
       {% block 'main' %}
 
-        <div class="row">
-          <div class="span4">Hello world</div>
-          <div class="span4">Hello world</div>
-          <div class="span4">Hello world</div>
-        </div>
+      <!-- Put main stuff here -->
+
       {% endblock %}
 
     </div> <!-- /container -->
