--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -6,6 +6,7 @@
 
     <meta name="description" content="{{ site.meta_description }}">
     <meta name="author" content="Applidget">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -45,6 +46,35 @@
               </h1>
             </div>
           </div>
+          
+          <div class="row">
+            <div class="span4">
+              <a href="#" class="stickers-sprite stickers-contact" rel="touch-sprite" data-selector="contact"></a>
+              <a href="#" class="stickers-sprite stickers-blogs" rel="touch-sprite" data-selector="blogs"></a>
+            </div>
+            
+            <div class="span4">
+              <a href="#" class="stickers-sprite stickers-jobs" rel="touch-sprite" data-selector="jobs"></a>
+              <a href="#" class="stickers-sprite stickers-follow" rel="touch-sprite" data-selector="follow"></a>
+            </div>
+            
+            <div class="span4">
+              <a href="#" class="stickers-sprite stickers-technologies" rel="touch-sprite" data-selector="technologies"></a>
+              <a href="#" class="stickers-sprite stickers-spirit" rel="touch-sprite" data-selector="spirit"></a>
+            </div>
+          </div>
+          
+          <div class="row">
+            <p class="span12">
+              <a href="#" class="btn btn-red">Get Instant Quote</a>
+            </p>
+          </div>
+          
+          <div class="row shadow-down v-up">
+            <div class="span12">
+              {{ "shadow-down.png" | image_tag }}
+            </div>
+          </div>
         </div>
       </div>
       
@@ -53,5 +83,6 @@
     <!-- Le javascripts -->
     {{'jquery.min' | javascript_tag }}
     {{ 'bootstrap.min.js' | javascript_tag}}
+    {{ 'application' | javascript_tag }}
   </body>
 </html>
