--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -33,7 +33,7 @@
         <div class="container">
           <div class="row shadow-up v-bottom">
             <div class="span12">
-              {{ "shadow-up.png" | image_tag }}
+              <img src="images/shadow-up.png" />
             </div>
           </div>
           
@@ -49,18 +49,18 @@
           
           <div class="row">
             <div class="span4">
-              <a href="#" class="stickers-sprite stickers-contact" rel="touch-sprite" data-selector="contact"></a>
-              <a href="#" class="stickers-sprite stickers-blogs" rel="touch-sprite" data-selector="blogs"></a>
+              <a href="#" class="stickers-sprite stickers-contact" rel="touch-sprite" data-selector="contact">Contact</a>
+              <a href="#" class="stickers-sprite stickers-blogs" rel="touch-sprite" data-selector="blogs">Blogs</a>
             </div>
             
             <div class="span4">
-              <a href="#" class="stickers-sprite stickers-jobs" rel="touch-sprite" data-selector="jobs"></a>
-              <a href="#" class="stickers-sprite stickers-follow" rel="touch-sprite" data-selector="follow"></a>
+              <a href="#" class="stickers-sprite stickers-jobs" rel="touch-sprite" data-selector="jobs">Jobs</a>
+              <a href="#" class="stickers-sprite stickers-follow" rel="touch-sprite" data-selector="follow">Follow Us</a>
             </div>
             
             <div class="span4">
-              <a href="#" class="stickers-sprite stickers-technologies" rel="touch-sprite" data-selector="technologies"></a>
-              <a href="#" class="stickers-sprite stickers-spirit" rel="touch-sprite" data-selector="spirit"></a>
+              <a href="#" class="stickers-sprite stickers-technologies" rel="touch-sprite" data-selector="technologies">Technologies</a>
+              <a href="#" class="stickers-sprite stickers-spirit" rel="touch-sprite" data-selector="spirit">Our Spirit</a>
             </div>
           </div>
           
@@ -72,7 +72,7 @@
           
           <div class="row shadow-down v-up">
             <div class="span12">
-              {{ "shadow-down.png" | image_tag }}
+              <img src="images/shadow-down.png" />
             </div>
           </div>
         </div>
