--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -56,6 +56,7 @@ $image-list: (contact, blogs, jobs, follow, technologies, spirit);  // TODO(ssau
   margin: auto;
   margin-bottom: 12px;
   border: 4px solid rgb(249,249,249);
+  text-indent: -9999px;
   @include border-radius(6px);
 }
 
@@ -173,7 +174,6 @@ $grey: #3d3d3d;
   
   a:hover {
     color: #fff;
-    text-shadow: 0 0 10px rgba(255,255,255,.25);
   }
   
   .btn {
@@ -184,6 +184,11 @@ $grey: #3d3d3d;
     border-width: 0px 1px 1px 0px;
     border-style: solid;
     @include border-radius(6px);
+  }
+
+  .btn:hover, .btn:active,.btn.active {
+    background-position: 0 -64px;
+    text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.2);
   }
   
   .container {
@@ -219,6 +224,11 @@ $grey: #3d3d3d;
   border-color:rgba(0,0,0,0.1) rgba(0,0,0,0.2) rgba(0,0,0,0.2) rgba(0,0,0,0.1);
   filter:progid:dximagetransform.microsoft.gradient(startColorstr='#ffde552f',endColorstr='#ffd64727',GradientType=0);
   filter:progid:dximagetransform.microsoft.gradient(enabled=false);
+}
+
+.btn-red:hover,.btn-red:active,.btn-red.active,.btn-red.disabled,.btn-red[disabled] {
+  background-color:#d54124;
+  *background-color:#d54124;
 }
 
 #nav { padding-bottom: 20px; }
