--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -21,7 +21,7 @@
   <body>
     
 
-    <div class="container" id="nav">
+    <div class="container">
 
       {% include 'topmenu' %}
       
@@ -31,9 +31,9 @@
       
       <div class="jumbotron" id="we-make-web">
         <div class="container">
-          <div class="row shadow-up v-bottom">
+          <div class="row shadow-up">
             <div class="span12">
-              <img src="images/shadow-up.png" />
+              <img src="images/shadow-up.png" class="v-bottom" />
             </div>
           </div>
           
@@ -70,7 +70,7 @@
             </p>
           </div>
           
-          <div class="row shadow-down v-up">
+          <div class="row shadow-down">
             <div class="span12">
               <img src="images/shadow-down.png" />
             </div>
