Why choose applidget section Done

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -49,18 +49,18 @@
           
           <div class="row">
             <div class="span4">
-              <a href="#" class="stickers-sprite stickers-contact" rel="touch-sprite" data-selector="contact">Contact</a>
               <a href="#" class="stickers-sprite stickers-blogs" rel="touch-sprite" data-selector="blogs">Blogs</a>
+              <a href="#" class="stickers-sprite stickers-jobs" rel="touch-sprite" data-selector="jobs">Jobs</a>
             </div>
             
             <div class="span4">
-              <a href="#" class="stickers-sprite stickers-jobs" rel="touch-sprite" data-selector="jobs">Jobs</a>
+              <a href="#" class="stickers-sprite stickers-contact" rel="touch-sprite" data-selector="contact">Contact</a>
               <a href="#" class="stickers-sprite stickers-follow" rel="touch-sprite" data-selector="follow">Follow Us</a>
             </div>
             
             <div class="span4">
               <a href="#" class="stickers-sprite stickers-technologies" rel="touch-sprite" data-selector="technologies">Technologies</a>
-              <a href="#" class="stickers-sprite stickers-spirit" rel="touch-sprite" data-selector="spirit">Our Spirit</a>
+              <a href="#" class="stickers-sprite stickers-spirit" rel="touch-sprite" data-selector="spirit">Spirit</a>              
             </div>
           </div>
           
@@ -73,6 +73,39 @@
           <div class="row shadow-down">
             <div class="span12">
               <img src="images/shadow-down.png" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="jumbotron" id="what-we-do">
+        <div class="container">
+          <div class="row">
+            <div class="span4">
+              <img src="images/air-liquide-screenshot.png" />
+            </div>
+            <div class="span5" style="">
+              <h2>
+              {% editable_short_text "what_we_do_title", hint: "What we do at Applidget", priority: 10 %}
+                <span class="light-orange">Why choose</span> <span class="bold-grey">Applidget?</span>
+              {% endeditable_short_text %}
+              </h2>
+              <p>
+                Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem deiectos atque maestitiam, quorum adventu intendebantur eculei uncosque parabat carnifex et tormenta. et ex is proscripti sunt plures actique in exilium alii, non nullos gladii consumpsere poenales.
+                <br /><br />
+                Nec enim quisquam facile meminit sub Constantio, ubi susurro tenus haec movebantur, quemquam absolutum.
+              </p>
+            </div>
+            <div class="span3">
+              <div class="white-glow-right">
+                <span class="specialties">Our specialties:</span>
+                <ul>
+                  <li>Ruby on Rails</li>
+                  <li>HTML5</li>
+                  <li>iOS</li>
+                  <li>Android</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
