--- a/app/views/snippets/topmenu.liquid
+++ b/app/views/snippets/topmenu.liquid
@@ -6,9 +6,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <a href="./" class="brand">
+        <!-- <a href="./" class="brand">
           {{ "applidget_logo_orange.png" | image_tag: "alt:Applidget" }}
-        </a>
+        </a> -->
       <div class="nav-collapse collapse">
         {% nav site, class: 'nav', active_class: 'active', bootstrap: true %}
       </div>
