--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -357,6 +357,8 @@ $grey: #3d3d3d;
 ------------------------- */
 @media (max-width: 480px) {
   .jumbotron {
+    padding: 0;
+
     h1 {
       font-size: 2.3em;
     }
@@ -368,8 +370,13 @@ $grey: #3d3d3d;
   
   #we-make-web {
     .shadow-down {
-      bottom: -40px;
+      bottom: -32px;
     }
+  }
+
+  #we-make-web h1, #what-we-do {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
