New SCSS files for Initializiation, Mixins and Specific Classes - PR comments

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -29,7 +29,7 @@
 
     {% block 'main' %}
       
-      <div class="jumbotron" id="we-make-web">
+      <div class="jumbotron" id="section-stickers">
         <div class="container">
           <div class="row shadow-up">
             <div class="span12">
@@ -66,7 +66,7 @@
           
           <div class="row">
             <p class="span12">
-              <a href="#" class="btn btn-red">Get Instant Quote</a>
+              <a href="#" class="btn btn-huge btn-red">Get Instant Quote</a>
             </p>
           </div>
           
