Comment for Get Instant Quote button

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -64,11 +64,11 @@
             </div>
           </div>
           
-          <div class="row">
+          <!-- <div class="row">
             <p class="span12">
               <a href="#" class="btn btn-huge btn-red">Get Instant Quote</a>
             </p>
-          </div>
+          </div> -->
           
           <div class="row shadow-down">
             <div class="span12">
