--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -49,18 +49,18 @@
           
           <div class="row">
             <div class="span4">
-              <a href="#" class="stickers-sprite stickers-blogs" rel="touch-sprite" data-selector="blogs">Blogs</a>
-              <a href="#" class="stickers-sprite stickers-jobs" rel="touch-sprite" data-selector="jobs">Jobs</a>
+              <a href="#" class="stickers-sprite stickers-applidget" rel="touch-sprite" data-selector="applidget">What We Do</a>
+              <a href="#" class="stickers-sprite stickers-events" rel="touch-sprite" data-selector="events">Events</a>
             </div>
             
             <div class="span4">
               <a href="#" class="stickers-sprite stickers-contact" rel="touch-sprite" data-selector="contact">Contact</a>
-              <a href="#" class="stickers-sprite stickers-follow" rel="touch-sprite" data-selector="follow">Follow Us</a>
+              <a href="#" class="stickers-sprite stickers-team" rel="touch-sprite" data-selector="team">Team</a>
             </div>
             
             <div class="span4">
               <a href="#" class="stickers-sprite stickers-technologies" rel="touch-sprite" data-selector="technologies">Technologies</a>
-              <a href="#" class="stickers-sprite stickers-spirit" rel="touch-sprite" data-selector="spirit">Spirit</a>              
+              <a href="#" class="stickers-sprite stickers-blogs" rel="touch-sprite" data-selector="blogs">Blogs</a>              
             </div>
           </div>
           
