Some fixes before PR

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -84,16 +84,18 @@
             <div class="span4">
               <img src="images/air-liquide-screenshot.png" />
             </div>
-            <div class="span5" style="">
+            <div class="span5">
               <h2>
-              {% editable_short_text "what_we_do_title", hint: "What we do at Applidget", priority: 10 %}
+              {% editable_short_text "why_choose_applidget_title", hint: "Why choose Applidget, priority: 15 %}
                 <span class="light-orange">Why choose</span> <span class="bold-grey">Applidget?</span>
               {% endeditable_short_text %}
               </h2>
               <p>
+              {% editable_short_text "why_choose_applidget_description", hint: "Why choose Applidget Description, priority: 20 %}
                 Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem deiectos atque maestitiam, quorum adventu intendebantur eculei uncosque parabat carnifex et tormenta. et ex is proscripti sunt plures actique in exilium alii, non nullos gladii consumpsere poenales.
                 <br /><br />
                 Nec enim quisquam facile meminit sub Constantio, ubi susurro tenus haec movebantur, quemquam absolutum.
+              {% endeditable_short_text %}
               </p>
             </div>
             <div class="span3">
