Some modifications for locomotive

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -86,7 +86,7 @@
             </div>
             <div class="span5">
               <h2>
-              {% editable_short_text "why_choose_applidget_title", hint: "Why choose Applidget, priority: 15 %}
+              {% editable_short_text "why_choose_applidget_title", hint: "Why choose Applidget", priority: 15 %}
                 <span class="light-orange">Why choose</span> <span class="bold-grey">Applidget?</span>
               {% endeditable_short_text %}
               </h2>
