--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 @import "base";
-@import "stickers-sprite";
-@import "jumbotron";
+@import "stickers-sprite.css.scss";
+@import "jumbotron.css.scss";
 
 body {
   font-family: "gothamrnd_book";
