--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -91,7 +91,7 @@
               {% endeditable_short_text %}
               </h2>
               <p>
-              {% editable_short_text "why_choose_applidget_description", hint: "Why choose Applidget Description, priority: 20 %}
+              {% editable_short_text "why_choose_applidget_description", hint: "Why choose Applidget Description", priority: 20 %}
                 Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem deiectos atque maestitiam, quorum adventu intendebantur eculei uncosque parabat carnifex et tormenta. et ex is proscripti sunt plures actique in exilium alii, non nullos gladii consumpsere poenales.
                 <br /><br />
                 Nec enim quisquam facile meminit sub Constantio, ubi susurro tenus haec movebantur, quemquam absolutum.
