--- a/public/stylesheets/jumbotron.css.scss
+++ b/public/stylesheets/jumbotron.css.scss
@@ -8,7 +8,6 @@
   text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
   
   h1 {
-    color: #252525;
     font-family: 'museo500';
     font-size: 3.7em;
     font-weight: normal;
@@ -44,6 +43,8 @@
     
     h1 {
       font-size: 3em;
+      margin-top: 20px;
+      margin-bottom: 32px;
     }
   }
 }
@@ -55,6 +56,8 @@
     
     h1 {
       font-size: 2.8em;
+      margin-top: 15px;
+      margin-bottom: 25px;
     }
   }
 }
@@ -65,6 +68,8 @@
     
     h1 {
       font-size: 2.3em;
+      margin-top: 29px;
+      margin-bottom: 30px;
     }
     
     p, .btn-huge {
