--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -83,7 +83,7 @@
       <div class="jumbotron" id="section-why-choose">
         <div class="container">
           <div class="row">
-            <div class="span4">
+            <div class="span4 center">
               {{ "air-liquide-screenshot.png" | theme_image_tag }}
             </div>
             <div class="span5">
@@ -138,6 +138,46 @@
             <div class="span12">
               <span class="glow">{{ "white-glow-big.png" || theme_image_tag }}</span>
               {{ "technologies.png" | theme_image_tag }}
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="jumbotron" id="section-technologies-description">
+        <div class="container">
+          <div class="row">
+            <div class="span4">
+              <div class="padding20">
+                <span class="list-title bold">We focus on:</span>
+                <ul class="list-description">
+                  {% editable_short_text "technologies_list", hint: "Technologies List", priority: 86 %}
+                    <li>Ruby on Rails</li>
+                    <li>HTML5</li>
+                    <li>iOS</li>
+                    <li>Android</li>
+                  {% endeditable_short_text %}
+                </ul>
+              </div>
+            </div>
+            <div class="span4">
+              <div class="padding20">
+                <span class="list-title">We are Applidget</span>
+                <span class="list-description">
+                  {% editable_short_text "we_are_applidget_description", hint: "We Are Applidget Description", priority: 84 %}
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  {% endeditable_short_text %}
+                </span>
+              </div>
+            </div>
+            <div class="span4">
+              <div class="padding20">
+                <span class="list-title">What they're saying</span>
+                <span class="list-description">
+                  {% editable_short_text "what_they_say_description", hint: "What they're saying Description", priority: 82 %}
+                    "Lorem ipsum dolor sit amet, consectetur adipisicing elit."
+                  {% endeditable_short_text %}
+                </span>
+              </div>
             </div>
           </div>
         </div>
