--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -10,6 +10,9 @@ body {
 .v-bottom, .v-bottom img { vertical-align: bottom; }
 .light-orange { color: #d64727; }
 .bold-grey { color: #464646; }
+.center { text-align: center; }
+.bold { font-weight: bold; }
+.padding20 { padding: 20px; }
 
 // Top navigation menu
 #main-navbar {
@@ -150,17 +153,44 @@ body {
 #section-technologies {
   background: #3586eb url('/images/grid-pattern-white.png') repeat top left;
   color: #fff;
-  padding-bottom: 50px;
+  padding-bottom: 40px;
   position: relative;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 
   .section-description {
     margin-top: 30px;
+    text-align: center;
   }
 
   .glow {
     position: absolute;
     right: -60px;
     top: -20px;
+  }
+}
+
+#section-technologies-description {
+  background: #1053a6 url('/images/grid-pattern-white.png') repeat top left;
+  color: #fff;
+
+  [class*="span"] {
+    background-color: #06336b;
+    line-height: 1.7em;
+    min-height: 200px;
+    @include border-radius(4px);
+    @include box-shadow(inset 0 0 7px #333333);
+
+    .list-title, .list-description { display: block; }
+
+    .list-title { 
+      font-weight: bold;
+      padding-bottom: 7px;
+    }
+
+    ul.list-description {
+      list-style-image: url('/images/list-white-check.png');
+      padding-left: 20px;
+    }
   }
 }
 
@@ -195,6 +225,14 @@ body {
 
     .glow {
       right: -110px;
+    }
+  }
+
+  #section-technologies-description {
+    [class*="span"] {
+      min-height: 220px;
+      
+      .list-title, .list-description { font-size: 0.9em; }
     }
   }
 }
@@ -233,6 +271,15 @@ body {
       right: -140px;
     }
   }
+
+  #section-technologies-description {
+    [class*="span"] {
+      min-height: inherit;
+      margin-bottom: 10px;
+
+      .list-title, .list-description { font-size: 0.9em; }
+    }
+  }   
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
