--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -174,6 +174,17 @@ body {
   }
 }
 
+#section-technologies:before {
+  content: '';
+  display: block;
+  position: absolute;
+  background: url('/images/dented-technologies.png') repeat-x top left;
+  top: -5px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
 #section-technologies-description {
   background: #1053a6 url('/images/grid-pattern-white.png') repeat top left;
   color: #fff;
