Technologies has 2 snippets now

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -124,78 +124,11 @@
 
 
       <div class="jumbotron" id="section-technologies">
-        <div class="container">
-          <div class="row">
-            <div class="span12">
-              <h1>
-              {% editable_short_text "our_technologies_title", hint: "Our Technologies Section Title", priority: 90 %}
-                Our Technologies
-              {% endeditable_short_text %}
-              </h1>
-            </div>
-          </div>
-
-          <div class="row section-description">
-            <div class="span12">
-              <span class="glow">{{ "white-glow-big.png" || theme_image_tag }}</span>
-              {{ "technologies.png" | theme_image_tag }}
-            </div>
-          </div>
-        </div>
+        {% include 'technologies' %}
       </div>
 
       <div class="jumbotron" id="section-technologies-description">
-        <div class="container">
-          <div class="row">
-            <div class="span4">
-              <div class="padding20">
-                <span class="section-title">
-                  {% editable_short_text "technologies_bloc_1_title", hint: "Technologies Bloc 1 Title", priority: 87 %}
-                    We focus on:
-                  {% endeditable_short_text %}
-                </span>
-                <span class="section-description">
-                  {% editable_short_text "technologies_bloc_1_description", hint: "Technologies Bloc 1 Description", priority: 86 %}
-                    <ul>
-                      <li>Ruby on Rails</li>
-                      <li>HTML5</li>
-                      <li>iOS</li>
-                      <li>Android</li>
-                    </ul>
-                  {% endeditable_short_text %}
-                </span>
-              </div>
-            </div>
-            <div class="span4">
-              <div class="padding20">
-                <span class="section-title">
-                  {% editable_short_text "technologies_bloc_2_title", hint: "Technologies Bloc 2 Title", priority: 85 %}
-                    We are Applidget
-                  {% endeditable_short_text %}
-                </span>
-                <span class="section-description">
-                  {% editable_short_text "technologies_bloc_2_description", hint: "Technologies Bloc 2 Description", priority: 84 %}
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                  {% endeditable_short_text %}
-                </span>
-              </div>
-            </div>
-            <div class="span4">
-              <div class="padding20">
-                <span class="section-title">
-                  {% editable_short_text "technologies_bloc_3_title", hint: "Technologies Bloc 3 Title", priority: 83 %}
-                    What they're saying
-                  {% endeditable_short_text %}
-                </span>
-                <span class="section-description">
-                  {% editable_short_text "technologies_bloc_3_description", hint: "Technologies Bloc 3 Description", priority: 82 %}
-                    "Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-                  {% endeditable_short_text %}
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
+        {% include 'technologies_description' %}
       </div>
       
     {% endblock %}
