Business card image added and other info

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -145,6 +145,17 @@
               </h1>
             </div>
           </div>
+
+          <div class="row">
+            <div class="span8">
+              {{ "business-card.png" | theme_image_tag }}
+            </div>
+            <div class="span4">
+              <span class="info success">You will attend</span>
+              <span class="info yes">Yes</span>
+              <span class="info maybe">Maybe</span>
+            </div>
+          </div>
         </div>
       </div>
       
